Ajuste dos ponteiros de minuto e hora

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
         const currentDate= new Date();
 
         const secondPercentage=currentDate.getSeconds()/60;
-        const minutesPercentage=currentDate.getMinutes()/60;
-        const hoursPercentage=currentDate.getHours()/12;
+        const minutesPercentage=(secondPercentage+currentDate.getMinutes())/60;
+        const hoursPercentage=(minutesPercentage+currentDate.getHours())/12;
 
         setRotate(secondsHands,secondPercentage)
         setRotate(minutesHands,minutesPercentage)
